installed asserts and status module

--- a/clients/js_client/package.json
+++ b/clients/js_client/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "axios": "^1.6.2"
+    "assert": "^2.1.0",
+    "axios": "^1.6.2",
+    "statuses": "^2.0.1"
   },
   "type": "module"
 }
