--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,15 @@ services:
   web:
     image: django-docker:0.0.1
     build: .
+    command: python3 manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
-    command: python3 /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      DB_NAME: ecommerce
-      DB_USER: admin
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     depends_on:
       - db
 
@@ -22,7 +21,10 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
 
 volumes:
   postgres_data:
