rewites for vercel.json config

--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,12 @@
         "src": "/(.*)",
         "dest": "main/wsgi.py"
       }
+    ],
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
     ]
   }
   
